--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@
 
 # Ignore bundler config.
 /.bundle
-
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /db/*.sqlite3-*
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -29,5 +27,10 @@
 /config/master.key
 .history/
 .byebug_history
-node_modules/
+/public/packs
+/public/packs-test
+/node_modules
 .vscode/
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
