--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@
 !/storage/.keep
 
 /public/assets
-.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
@@ -34,3 +33,4 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+Gemfile.lock
