--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-is": "^16.12.0",
     "react_ujs": "^2.6.1",
+    "styled-components": "5.0.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.41.6",
-    "styled-components": "5.0.1"
+    "webpack": "^4.41.6"
   },
   "version": "0.1.0",
   "devDependencies": {
