--- a/config/database.yml
+++ b/config/database.yml
@@ -81,4 +81,5 @@ test:
 production:
   <<: *default
   database: react_rails_development
-  url: <%= ENV['DATABASE_URL'] %>
+  username: react_rails
+  password: <%= ENV['REACT_RAILS_DATABASE_PASSWORD'] %>
